@@ -6,6 +6,8 @@ list.proto.copy     = fn () modules.list_fn.list_copy(this);
 list.proto.append   = fn (x) modules.list_fn.list_append(this, x);
 list.proto.prepend  = fn (x) modules.list_fn.list_prepend(this, x);
 list.proto.extend   = fn (l) modules.list_fn.list_extend(this, l);
+list.proto.first    = fn () modules.list_fn.list_first(this);
+list.proto.last     = fn () modules.list_fn.list_last(this);
 list.proto.pop      = fn () modules.list_fn.list_poplast(this);
 list.proto.push     = fn () modules.list_fn.list_append(this);
 list.proto.shift    = fn () modules.list_fn.list_popfirst(this);
